# VRS_nesting

./: .clawignore  .gitignore  AGENTS.md  IDENTITY.md  MEMORY.md  README.md  README_SGH_Q03_PACKAGE.md  README_SGH_Q07R_PACKAGE.md  README_SGH_Q08R_PACKAGE.md  README_SGH_Q09_PACKAGE.md  README_SGH_Q21R1_PACKAGE.md  README_SGH_Q22R1_PACKAGE.md  README_SGH_Q22_PACKAGE.md  README_SGH_Q23R1_PRODUCTION_SPARROW_CUTOVER_IMPLEMENTATION_PACKAGE.md  README_SGH_Q23R2_REAL_SPARROW_CUTOVER_COMPLETION_PACKAGE.md  README_SGH_Q23_FULL_SPARROW_PARITY_CUTOVER_PACKAGE.md  README_SGH_Q24R1_NATIVE_SPARROW_PARITY_LIFECYCLE_PACKAGE.md  README_SGH_Q24R2_NATIVE_SPARROW_CORE_PORT_PACKAGE.md  README_SGH_Q24R3_NATIVE_SPARROW_LIFECYCLE_PARITY_NO_COMPRESSION_PACKAGE.md  README_SGH_Q24R4_NATIVE_SPARROW_MODEL_CUTOVER_PACKAGE.md  README_SGH_Q24R5_ARCHITECTURAL_NATIVE_SPARROW_CUTOVER_PACKAGE.md  README_SGH_Q24R6_NATIVE_SPARROW_TRACKER_SEARCH_PARITY_HARDENING_PACKAGE.md  README_SGH_Q24R7R1_DENSE_FIRST_SHEET_REAL_RUN_FIX_PACKAGE.md  README_SGH_Q24R7_NATIVE_SPARROW_SAMPLER_EVALUATOR_FIRST_SHEET_LV8_PACKAGE.md  README_SGH_Q24R8_FULL_NATIVE_SPARROW_CORE_PARITY_PACKAGE.md  README_SGH_Q24R9_EXACT_UPSTREAM_STYLE_TRACKER_EVALUATOR_SEARCH_SEMANTICS_PACKAGE.md  README_SGH_Q24_SPARROW_PARITY_QUALITY_HARDENING_PACKAGE.md  README_SGH_Q25_R1_SEMANTIC_SPARROW_CORE_PARITY_FIX_PACKAGE.md  README_SGH_Q25_R2_COMPLETE_UPSTREAM_SPARROW_CORE_SEMANTIC_PORT_PACKAGE.md  README_SGH_Q25_R3_UPSTREAM_SPARROW_PORT_CLOSURE_PACKAGE.md  README_SGH_Q25_R4_SEMANTIC_PARITY_AUDIT_FIX_PACKAGE.md  THIRD_PARTY_NOTICES.md  USER.md  (+15 more)
.idx/: dev.nix
(+3566 files in other folders)
