[package]
name = "vrs_solver"
version = "0.1.0"
edition = "2021"

[dependencies]
jagua-rs = "0.6.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# SGH-Q38: robust straight-skeleton polygon offset for spacing-expanded geometry
# (handles concave / high-vertex real LV8 polygons). Versions pinned to the
# already-resolved transitive lockfile entries (geo 0.24.1, geo-buffer 0.2.0).
geo = "0.24"
geo-buffer = "0.2"
